# filestash-winclient

./: CMakeLists.txt  README.md
docs/: architecture.md
src/: CloudProvider.cpp  CloudProvider.h  FilestashClient.cpp  FilestashClient.h  StateMachine.cpp  StateMachine.h  StateStore.cpp  StateStore.h  main.cpp
